--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hakaze Cho
+title: Haolin Yang
 
 sass:
     sass_dir: assets/css
@@ -6,4 +6,4 @@ sass:
 
 google_analytics: G-RFM3S7GRYQ
 
-timezone: Asia/Tokyo
+timezone: America/Chicago
