--- a/_data/preprints.yml
+++ b/_data/preprints.yml
@@ -4,7 +4,7 @@
     - name: hy
     - name: hc
     - name: ni
-  venue: ICLR
+  venue: iclr
   year: 2026
   basic_url: "https://arxiv.org/abs/2509.24164"
   pages: 45
@@ -30,7 +30,7 @@
     - name: hc
     - name: kd
     - name: ni
-  venue: ICLR
+  venue: iclr
   year: 2026
   basic_url: "https://arxiv.org/abs/2509.24169"
   pages: 48
@@ -56,7 +56,7 @@
     - name: Brian M. Kurkoski
       url: "https://www.jaist.ac.jp/is/labs/bits/brian"
     - name: ni
-  venue: ICLR
+  venue: iclr
   year: 2026
   basic_url: "https://arxiv.org/abs/2509.20997"
   pages: 36
@@ -82,7 +82,7 @@
     - name: Gouki Minegishi
       url: "https://gouki-minegishi.github.io/"
     - name: ni
-  venue: ICLR
+  venue: iclr
   year: 2026
   basic_url: "https://arxiv.org/abs/2509.21012"
   pages: 67
