--- a/_data/preprints.yml
+++ b/_data/preprints.yml
@@ -80,7 +80,7 @@
     - name: hc
     - name: hy
     - name: Gouki Minegishi
-      url: "https://gouki-minegishi.github.io/"
+      url: "https://gouki510.github.io/"
     - name: ni
   venue: iclr
   year: 2026
