--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -17,3 +17,14 @@ yz:
 kd:
   name: "Kaize Ding"
   url: "https://kaize0409.github.io/"
+
+yz:
+  name: "Yining Zhang"
+  url: "https://www.dfll.tsinghua.edu.cn/info/1053/1913.htm"
+
+fy:
+  name: "Fang Yang"
+  url: "https://www.lc.tsinghua.edu.cn/info/1010/1039.htm"
+
+sh:
+  name: "Shuyuan Han"
