--- a/_data/journals.yml
+++ b/_data/journals.yml
@@ -1,4 +1,4 @@
-- title: "Unifying Attention Heads and Task Vectors via Hidden State Geometry in In-Context Learning"
+- title: "Does Checking-In Help? Understanding L2 Learners’ Autonomous Check-In Behavior in an English-Language MOOC Through Learning Analytics"
   authors:
     - name: yz
     - name: fy
