fix author conflict

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -18,7 +18,7 @@ kd:
   name: "Kaize Ding"
   url: "https://kaize0409.github.io/"
 
-yz:
+ynz:
   name: "Yining Zhang"
   url: "https://www.dfll.tsinghua.edu.cn/info/1053/1913.htm"
 
