--- a/_data/journals.yml
+++ b/_data/journals.yml
@@ -1,6 +1,6 @@
 - title: "Does Checking-In Help? Understanding L2 Learners’ Autonomous Check-In Behavior in an English-Language MOOC Through Learning Analytics"
   authors:
-    - name: yz
+    - name: ynz
     - name: fy
     - name: hy
     - name: sh
